--- a/.github/workflows/datadog-static-analysis.yml
+++ b/.github/workflows/datadog-static-analysis.yml
@@ -8,3 +8,6 @@ jobs:
     - name: Check code meets quality standards
       id: datadog-static-analysis
       uses: juli1/rosie-github-action@main
+      with:
+        dd_app_key: ${{ secrets.DD_APP_KEY }}
+        dd_api_key: ${{ secrets.DD_API_KEY }}
