--- a/.github/workflows/datadog-static-analysis.yml
+++ b/.github/workflows/datadog-static-analysis.yml
@@ -8,6 +8,8 @@ jobs:
     - name: Check code meets quality standards
       id: datadog-static-analysis
       uses: juli1/rosie-github-action@main
-      with:
+      env:
         dd_app_key: ${{ secrets.DD_APP_KEY }}
         dd_api_key: ${{ secrets.DD_API_KEY }}
+        dd_env: ${{ env.DD_ENV }}
+        dd_service: ${{ env.DD_SERVICE }}
