--- a/.github/workflows/datadog-static-analysis.yml
+++ b/.github/workflows/datadog-static-analysis.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Datadog Static Analyzer
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Check code meets quality standards
       id: datadog-static-analysis
       uses: juli1/rosie-github-action@main
