--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: '2.1'
 orbs:
   datadog-static-analysis: juli1/rosie-orb@dev:alpha
 jobs:
-  run-test:
+  build:
     docker:
       - image: cimg/node:current
     steps:
