--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,7 @@ jobs:
       - image: cimg/node:current
     steps:
       - checkout
-      - datadog-static-analysis/analyze:
-          dd_app_key: $DD_APP_KEY
-          dd_api_key: $DD_API_KEY
-          dd_env: $DD_ENV
-          dd_service: $DD_SERVICE
-          dd_site: datad0g.com
+      - datadog-static-analysis/analyze
 workflows:
   main:
     jobs:
